--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -12098,6 +12098,10 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   padding-top: 30px;
 }
 
+#buddypress .bp-media-document-uploader #bp-media-document-next {
+  float: left;
+}
+
 #media-folder-document-data-table td.svg-document-icon {
   padding-left: 0;
 }
@@ -13062,6 +13066,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span.selected,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span.selected {
   background-color: #fbfbfc;
+}
+
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span.disabled,
+.location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span.disabled {
+  pointer-events: none;
 }
 
 .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li:hover > .sub-menu-anchor,
