Fixed topic revision log spacing issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forums.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forums.scss
@@ -812,6 +812,22 @@ p.form-allowed-tags {
 	color: #aaa;
 }
 
+
+#bbpress-forums {
+
+	.bbp-topic-content,
+	.bbp-reply-content,
+	.bbp-reply-content {
+
+		.bb-activity-media-wrap + ul.bbp-topic-revision-log,
+		.bb-activity-media-wrap + .bbp-reply-revision-log {
+			margin-top: 15px;
+		}
+
+	}
+
+}
+
 #bbpress-forums .bbp-topic-content ul.bbp-topic-revision-log li,
 #bbpress-forums .bbp-reply-content ul.bbp-topic-revision-log li,
 #bbpress-forums .bbp-reply-content ul.bbp-reply-revision-log li {
