--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -8339,6 +8339,15 @@ p.form-allowed-tags {
   color: #aaa;
 }
 
+#bbpress-forums .bbp-topic-content .bb-activity-media-wrap + ul.bbp-topic-revision-log,
+#bbpress-forums .bbp-topic-content .bb-activity-media-wrap + .bbp-reply-revision-log,
+#bbpress-forums .bbp-reply-content .bb-activity-media-wrap + ul.bbp-topic-revision-log,
+#bbpress-forums .bbp-reply-content .bb-activity-media-wrap + .bbp-reply-revision-log,
+#bbpress-forums .bbp-reply-content .bb-activity-media-wrap + ul.bbp-topic-revision-log,
+#bbpress-forums .bbp-reply-content .bb-activity-media-wrap + .bbp-reply-revision-log {
+  margin-top: 15px;
+}
+
 #bbpress-forums .bbp-topic-content ul.bbp-topic-revision-log li,
 #bbpress-forums .bbp-reply-content ul.bbp-topic-revision-log li,
 #bbpress-forums .bbp-reply-content ul.bbp-reply-revision-log li {
