--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1637,6 +1637,57 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			animation: spin 3s infinite linear;
 		}
 	}
+
+}
+
+.bb-media-container {
+
+	.bb-media-section {
+		height: 90vh;
+		overflow: auto;
+		padding-right: 40px;
+		align-items: flex-end;
+		position: relative;
+
+		.img-section {
+			overflow: auto;
+			height: calc(90vh - 40px);
+
+			img {
+				padding: 20px;
+				background-color: #fff;
+			}
+
+		}
+
+		.document-text {
+			width: 100%;
+		}
+
+		h3 {
+			background-color: #fff;
+			display: block;
+			margin-bottom: 0;
+			position: absolute;
+			top: 0;
+			left: 0;
+			padding: 6px 0;
+			right: 40px;
+			text-align: center;
+			border-bottom: 1px solid #ecedee;
+		}
+
+	}
+
+	.document-text-file-data-hidden {
+		display: none;
+	}
+
+	.CodeMirror {/* stylelint-disable-line */
+		height: calc(90vh - 40px);
+		border-top: 1px solid #ecedee;
+	}
+
 }
 
 #media-folder-document-data-table .media-folder_items {
