--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12394,6 +12394,51 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   animation: spin 3s infinite linear;
 }
 
+.bb-media-container .bb-media-section {
+  height: 90vh;
+  overflow: auto;
+  padding-right: 40px;
+  align-items: flex-end;
+  position: relative;
+}
+
+.bb-media-container .bb-media-section .img-section {
+  overflow: auto;
+  height: calc(90vh - 40px);
+}
+
+.bb-media-container .bb-media-section .img-section img {
+  padding: 20px;
+  background-color: #fff;
+}
+
+.bb-media-container .bb-media-section .document-text {
+  width: 100%;
+}
+
+.bb-media-container .bb-media-section h3 {
+  background-color: #fff;
+  display: block;
+  margin-bottom: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 6px 0;
+  right: 40px;
+  text-align: center;
+  border-bottom: 1px solid #ecedee;
+}
+
+.bb-media-container .document-text-file-data-hidden {
+  display: none;
+}
+
+.bb-media-container .CodeMirror {
+  /* stylelint-disable-line */
+  height: calc(90vh - 40px);
+  border-top: 1px solid #ecedee;
+}
+
 #media-folder-document-data-table .media-folder_items {
   margin: 0;
   border-bottom: 1px solid #e7e9ec;
