--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -481,6 +481,53 @@ input#send-to-input {
 
 .bp-messages-content #bp-message-content {
 	margin-top: $marg-lrg;
+	position: relative;
+	padding: 20px;
+
+	.medium-editor-toolbar {
+		top: inherit;
+		bottom: 80px;
+		visibility: visible;
+		z-index: 99;
+		background-color: transparent;
+		opacity: 0.6;
+
+		&.medium-editor-toolbar-active {
+			opacity: 1;
+		}
+
+		.medium-editor-toolbar-actions {
+			background-color: transparent;
+
+			button {
+				box-shadow: none;
+				padding: 10px 12px;
+				border: 0;
+				background-color: transparent !important;
+				color: rgba(18, 43, 70, 0.4) !important;
+			}
+
+		}
+
+	}
+
+	#message-reply-form-submit-wrapper {
+		flex-direction: column;
+		align-items: flex-end;
+		margin: 0 -20px;
+	}
+
+	#message-reply-new-submit {
+		padding: 20px 20px 0;
+		text-align: right;
+		border-top: 1px solid #ebe9e6;
+		width: 100%;
+	}
+	#whats-new-messages-toolbar	{
+		padding: 0 15px 15px;
+		justify-content: flex-end;
+	}
+
 }
 
 .messages .select2-dropdown {
