--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1756,7 +1756,12 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			white-space: nowrap;
 
 			> span {
-				white-space: pre;
+				max-width: calc(80% - 30px);
+				white-space: nowrap;
+				display: block;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				float: left;
 			}
 
 		}
@@ -1824,7 +1829,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			background: #fff;
 			box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
 			border-radius: 4px;
-			width: 168px;
+			width: 198px;
 			z-index: 1;
 			opacity: 0;
 			visibility: hidden;
@@ -1898,6 +1903,10 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 
 					&.download_file a:before {
 						content: "\e890";
+					}
+
+					&.copy_download_file_url a:before {
+						content: "\e8ac";
 					}
 
 					&.privacy_file a:before {
