#266 - Fixed code preview alignment issue

--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -13437,6 +13437,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   height: 300px;
   color: black;
   direction: ltr;
+  text-align: left;
 }
 
 /* PADDING */
