--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -13437,6 +13437,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   height: 300px;
   color: black;
   direction: rtl;
+  text-align: right;
 }
 
 /* PADDING */
