admin settings icon for Zoom

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -566,6 +566,12 @@ body.buddyboss_page_bbp-converter .bp-admin-card h2:before,
 	background-size: 100% 100%;
 }
 
+/* Integrations - Zoom Conference */
+.bp-admin-card.section-bp_zoom_settings_section h2:before {
+	background-image: url(../../images/admin/icons/logos/zoom.png);
+	background-size: 100% 100%;
+}
+
 /*
  * 3.0 Content
  */
