--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -195,6 +195,72 @@
 				@include font-size(26);
 			}
 		}
+
+		.message_actions {
+
+			.message_action__anchor {
+				color: #555;
+			}
+
+			.message_action__list {
+				display: none;
+				margin: 0;
+				position: absolute;
+				background: #fff;
+				box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
+				border-radius: 4px;
+				padding: 5px 0;
+				min-width: 190px;
+				left: -20px;
+				top: 35px;
+				z-index: 119;
+				list-style: none;
+
+				&.open {
+					display: block;
+				}
+
+				ul {
+					margin: 0;
+				}
+
+				li {
+					cursor: pointer;
+					line-height: 1;
+					margin: 0;
+					padding: 6px 14px;
+					position: relative;
+					display: flex;
+					align-items: center;
+					margin-bottom: 1px;
+
+					a {
+						color: #7f868f;
+						font-size: 14px;
+					}
+				}
+
+				&:before {
+					content: " ";
+					position: absolute;
+					width: 0;
+					height: 0;
+					top: 0;
+					left: 20px;
+					border: 6px solid #000;
+					border-color: #fff #fff transparent transparent;
+					-webkit-transform-origin: 0 0;
+					-ms-transform-origin: 0 0;
+					transform-origin: 0 0;
+					-webkit-transform: rotate(-45deg);
+					-ms-transform: rotate(-45deg);
+					transform: rotate(-45deg);
+					box-shadow: 2px -3px 3px 0 rgba(0, 0, 0, 0.02);
+					z-index: 1002;
+				}
+
+			}
+		}
 	}
 
 	form.send-reply {
