--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -538,7 +538,9 @@ span.icons:before {
 			border: 1px solid;
 			font-size: 11px;
 			line-height: normal;
-			padding: 1px;
+			min-width: 19px;
+			padding: 2px;
+			text-align: center;
 		}
 	}
 
