--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12326,6 +12326,25 @@ span.icons:before {
   text-align: center;
 }
 
+.message-lists .thread-item {
+  position: relative;
+}
+
+.message-lists .thread-item .close-conversation {
+  color: #939597;
+  position: absolute;
+  right: 22px;
+  bottom: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: all ease 0.3s;
+}
+
+.message-lists .thread-item:hover .close-conversation {
+  opacity: 1;
+  visibility: visible;
+}
+
 /* Rounded sliders */
 .bp-group-message-slider.bp-group-message-round {
   border-radius: 34px;
