--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1090,6 +1090,48 @@ a.layout-grid-view {
   position: relative;
 }
 
+.bbp-topic-form #whats-new-toolbar {
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+.bbp-topic-form #whats-new-toolbar .medium-editor-toolbar {
+  top: inherit;
+  bottom: 6px;
+  left: 0;
+  visibility: visible;
+  z-index: 99;
+  background-color: transparent;
+  opacity: 0.3;
+  transition: opacity ease 0.2s;
+}
+
+.bbp-topic-form #whats-new-toolbar .medium-editor-toolbar.medium-editor-toolbar-active {
+  opacity: 1;
+}
+
+.bbp-topic-form #whats-new-toolbar .medium-editor-toolbar .medium-editor-toolbar-actions {
+  background-color: transparent;
+}
+
+.bbp-topic-form #whats-new-toolbar .medium-editor-toolbar .medium-editor-toolbar-actions button {
+  box-shadow: none;
+  padding: 10px 10px 10px 0;
+  min-width: 30px;
+  border: 0;
+  background-color: transparent !important;
+  color: rgba(18, 43, 70, 0.4) !important;
+}
+
+.bbp-topic-form #whats-new-toolbar .medium-editor-toolbar .medium-editor-toolbar-actions button.medium-editor-button-active {
+  color: #122b46 !important;
+}
+
+.bbp-topic-form #whats-new-toolbar .medium-editor-toolbar .medium-editor-toolbar-form .medium-editor-toolbar-input {
+  width: 220px;
+}
+
 #whats-new-textarea [contenteditable="true"]:empty:before {
   content: attr(placeholder);
   color: #bbb;
@@ -4372,7 +4414,7 @@ input#send-to-input {
 
 .bp-messages-content #bp-message-content .medium-editor-toolbar {
   top: inherit;
-  bottom: 80px;
+  bottom: 5px;
   visibility: visible;
   z-index: 99;
   background-color: transparent;
@@ -4390,15 +4432,26 @@ input#send-to-input {
 
 .bp-messages-content #bp-message-content .medium-editor-toolbar .medium-editor-toolbar-actions button {
   box-shadow: none;
-  padding: 10px 10px 10px;
+  padding: 10px 10px 10px 0;
+  min-width: 30px;
   border: 0;
   background-color: transparent !important;
   color: rgba(18, 43, 70, 0.4) !important;
 }
 
+.bp-messages-content #bp-message-content .medium-editor-toolbar .medium-editor-toolbar-actions button.medium-editor-button-active {
+  color: #122b46 !important;
+}
+
+.bp-messages-content #bp-message-content .medium-editor-toolbar .medium-editor-toolbar-form .medium-editor-toolbar-input {
+  width: 220px;
+}
+
 .bp-messages-content #bp-message-content #message-reply-form-submit-wrapper {
   flex-direction: column;
-  align-items: flex-end;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   margin: 0 -20px;
 }
 
@@ -4412,6 +4465,7 @@ input#send-to-input {
 .bp-messages-content #bp-message-content #whats-new-messages-toolbar {
   padding: 0 15px 15px;
   justify-content: flex-end;
+  width: 100%;
 }
 
 .messages .select2-dropdown {
@@ -4574,7 +4628,7 @@ input#send-to-input {
   margin-right: 10px;
 }
 
-.bp-messages-user-threads {
+body .bp-messages-user-threads {
   max-height: 80vh;
   overflow: auto;
 }
