--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -210,8 +210,8 @@
 				box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
 				border-radius: 4px;
 				padding: 5px 0;
-				min-width: 190px;
-				left: -20px;
+				min-width: 165px;
+				right: -20px;
 				top: 35px;
 				z-index: 119;
 				list-style: none;
@@ -225,18 +225,18 @@
 				}
 
 				li {
-					cursor: pointer;
-					line-height: 1;
 					margin: 0;
-					padding: 6px 14px;
-					position: relative;
-					display: flex;
-					align-items: center;
-					margin-bottom: 1px;
+					list-style: none;
 
 					a {
-						color: #7f868f;
-						font-size: 14px;
+						font-size: 13px;
+						font-weight: inherit;
+						color: #939597;
+						letter-spacing: -0.24px;
+						line-height: 1;
+						margin-bottom: 1px;
+						padding: 0.5625rem 0.9375rem;
+						display: block;
 					}
 				}
 
@@ -246,7 +246,7 @@
 					width: 0;
 					height: 0;
 					top: 0;
-					left: 20px;
+					right: 27px;
 					border: 6px solid #000;
 					border-color: #fff #fff transparent transparent;
 					-webkit-transform-origin: 0 0;
