--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -610,6 +610,24 @@ span.icons:before {
 	}
 }
 
+#group-messages-container .bb-groups-messages-right .group-messages-compose {
+	font-size: 0;
+	display: none;
+	line-height: 0;
+
+	&:after {
+		content: "\f465";
+		font-size: 20px;
+		font-family: dashicons;
+		vertical-align: top;
+		text-align: center;
+		transition: color 0.1s ease-in;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
+	}
+
+}
+
 
 @media screen and (min-width: 1081px) {
 
