--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -479,6 +479,10 @@ input#send-to-input {
 	}
 }
 
+.bp-messages-content pre {
+	padding: 1rem 1.5rem;
+}
+
 .bp-messages-content #bp-message-content {
 	margin-top: $marg-lrg;
 	padding: 20px;
